6907 strcoll() and strxfrm() don't seem to agree Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@omniti.com>